# copyright-free-image-viewer

./: .env.example  .gitignore  Dockerfile  License  README.md  app.py  docker-compose.yml  flask_app.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
assets/car-quiz/: search.txt
assets/mushroom-quiz/: search.txt
core/: db.py  models.py  session.py  state.py
factory/: image_service_factory.py
routes/: explorer.py  gallery.py  review.py  settings.py  setup.py
services/: flickr_service.py  image_service.py  pexels_service.py  pixabay_service.py  unsplash_service.py  wger_service.py
templates/: error_page.html  explorer_page.html  gallery_page.html  home_page.html  review_page.html  settings_page.html  txt_setup_page.html
tests/: conftest.py  test_app.py  test_services.py  test_wger_service.py
utils/: base_image_utils.py  common_utils.py  download_utils.py  env_constants.py  env_utils.py  flickr_utils.py  image_utils.py  log_utils.py  pexel_utils.py  pixabay_utils.py  unsplash_utils.py  wger_utils.py
